# autodecrypt

./: .flake8  .gitignore  .pre-commit-config.yaml  66-pongos.rules  LICENSE  README.md  autodecrypt  autodecrypt.py  decrypt_img.py  install.sh  ipsw_dl.py  pyproject.toml  requirements.txt  scrapkeys.py  setup.cfg  setup.py
autodecrypt/: autodecrypt.py  decrypt_img.py  fw_utils.py  ipsw_dl.py  ipsw_utils.py  main.py  pongo.py  scrapkeys.py  utils.py
tests/: autodecrypt.sh
